[feat] use params to get token /verify-email/:token
