# routes/users.js
@@ -88,17 +88,10 @@ router.post('/sign-up', function(req, res, next) {
 });
 
 /* 驗證註冊信 */
-router.get('/verify-email', function(req, res, next) {
+router.get('/verify-email/:token', function(req, res, next) {
   /**
     * #swagger.tags = ['Sign-in']
     * #swagger.summary = 'Verify the registration email'
-  */
-  /**
-    #swagger.parameters['token'] = {
-      in: 'query',
-      description: 'token',
-      type: 'string',
-    }
   */
 /**
   #swagger.responses[200] = {
